--- a/src/config.yaml
+++ b/src/config.yaml
@@ -9,7 +9,7 @@ site:
 # Default SEO metadata
 metadata:
   title: Relevant Study, study what is relevant
-    default: 
+    default: AstroWind
     template: '%s — AstroWind'
   description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
   robots:
