--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "astro": "^5.1.8",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.5",
+    "katex": "^0.16.21",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "unpic": "^3.22.0"
   },
   "devDependencies": {
